--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
 			<artifactId>xstream</artifactId>
 			<version>1.4.8</version>
 		</dependency>
+		<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+    <version>18.0</version>
+</dependency>
 	</dependencies>
 </project>
